--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@
 }
 .menus:hover{
 /*     background: linear-gradient(to left, rgb(133,139,139) 50%, black 50%);
-        /* background-size: 200% 100%; */
+        /* background-size: 200% 100%; 
         background-position:left  bottom;
         transition: all .5s ease-in-out; */
-    background-color:black;
+    background-color: black;
     color:white;
 }
 
