--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /* *{
     background-color: rgb(75, 82, 79);
 } */
+.td{
+    justify-content: space-between;
+    margin-left:10px;
+}
 .red{
     color: red;
     border-bottom: 5px double white;
